port: numen-core to Minecraft 1.20.4 on Forge (downward, loader swap)
Below 1.20.6 the loader is Forge and the toolchain is Java 17. Replaces the
neoforge subproject with a forge one; depends on / JiJ-bundles numen-api-*-1.20.4.

Build machinery (mirrors the api 1.20.4 branch): Gradle wrapper 9.2 -> 8.7;
common NeoForge moddev -> Sponge VanillaGradle; fabric-loom-remap -> plain
fabric-loom; forge subproject on ForgeGradle 6; settings Forge+Sponge repos +
include('forge'); Java 17; forge_version 49.0.19; all three build.gradle api
coords -> 1.20.4.

forge/ subproject: NumenCoreForge @Mod entry mirroring NeoForge (per-tick server
work on MinecraftForge.EVENT_BUS via TickEvent.ServerTickEvent END; PathCaches
drop on ServerStopped; client-gated declareBundledSkills), Forge datagen
providers, META-INF/mods.toml. numen-api JiJ via ForgeGradle jarJar
(transitive=false; ranged [0.0.0,)) -> the shippable single-file mod is the
-all.jar (FG6 default classifier).

Java-17 / 1.20.4 downgrades in common: ExecuteTool/TaskResult/CancelTasks payloads
to the pre-1.20.5 CustomPacketPayload shape; Math.clamp -> min/max; ChunkStatus
package; food/attribute APIs; blockInteractionRange -> 4.5D; isSameItemSameTags.

Full recipe in docs/VERSION_API_CHANGES.md.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HDpteJ3529z1B4zdBDrAL8